# sopel-contextualreminders

./: Makefile  README.md  requirements.txt  setup.cfg
contextualreminders/: config.py  ctx_service.py  plugin.py  types.py
