[metadata]
name = sopel-contextualreminders
version = 0.1.dev1
description = Contextual reminders plugin for Sopel
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sopel plugin reminders bot irc
author = David Pirogov
author_email = 580286+davidpirogov@users.noreply.github.com
url = https://github.com/davidpirogov/sopel-contextualreminders
license = MIT License
license_file = LICENSE
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.7, <4
packages = find:
zip_safe = false
install_requires =
    sopel>=7.1
    PrivateBinAPI>=1.0

[options.packages.find]
exclude =
    sopel
    sopel.*

[options.entry_points]
sopel.plugins =
    contextualreminders = contextualreminders.plugin

[flake8]
max-line-length = 100
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:run]
branch = True
source = contextualreminders

[isort]
line_length = 100
known_third_party = sopel
known_first_party = contextualreminders
